[package]
name = "craftping"
version = "0.5.0"
authors = ["kiwiyou <kiwiyou@kiwiyou.dev>"]
edition = "2021"
description = "Minecraft Server List Ping Implementation"
license = "MIT"
keywords = ["minecraft", "ping"]
categories = ["network-programming"]
repository = "https://github.com/kiwiyou/craftping"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["sync"]
sync = []
async-futures = ["futures"]
async-tokio = ["tokio"]

[dependencies]
base64 = "0.21.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
futures = { version = "0.3.30", optional = true }

[dependencies.tokio]
version = "1.12.0"
optional = true
default-features = false
features = ["io-util"]

[dev-dependencies]
tokio = { version = "1.12.0", features = ["net", "macros", "rt"] }
async-std = { version = "1.10.0", features = ["attributes"] }
