[package]
name = "craftping"
version = "0.6.0"
authors = ["kiwiyou <kiwiyou@kiwiyou.dev>"]
edition = "2024"
description = "Minecraft Server List Ping Implementation"
license = "MIT"
keywords = ["minecraft", "ping"]
categories = ["network-programming"]
repository = "https://github.com/kiwiyou/craftping"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["sync"]
sync = []
async-futures = ["futures"]
async-tokio = ["tokio"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = { version = "0.3.31", optional = true }

[dependencies.tokio]
version = "1.44.1"
optional = true
default-features = false
features = ["io-util"]

[dev-dependencies]
tokio = { version = "1.44.1", features = ["net", "macros", "rt"] }
async-std = { version = "1.13.0", features = ["attributes"] }
